--- a/sec-ramsey.html
+++ b/sec-ramsey.html
@@ -8,7 +8,7 @@
 <html lang="en-US" dir="ltr">
 <head xmlns:og="http://ogp.me/ns#" xmlns:book="https://ogp.me/ns/book#">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>R(3,3) = 6</title>
+<title>Example: R(3,3) = 6</title>
 <meta name="Keywords" content="Authored in PreTeXt">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta property="og:type" content="book">
@@ -143,7 +143,7 @@ window.MathJax = {
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-induction.html" class="internal"><span class="codenumber">3.2</span> <span class="title">Induction</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-contradiction.html" class="internal"><span class="codenumber">3.3</span> <span class="title">Contradiction</span></a></div></li>
 <li class="toc-item toc-section"><div class="toc-title-box"><a href="sec-exhaustion.html" class="internal"><span class="codenumber">3.4</span> <span class="title">Exhaustion</span></a></div></li>
-<li class="toc-item toc-section active"><div class="toc-title-box"><a href="sec-ramsey.html" class="internal"><span class="codenumber">3.5</span> <span class="title">R(3,3) = 6</span></a></div></li>
+<li class="toc-item toc-section active"><div class="toc-title-box"><a href="sec-ramsey.html" class="internal"><span class="codenumber">3.5</span> <span class="title">Example: R(3,3) = 6</span></a></div></li>
 </ul>
 </li>
 <li class="toc-item toc-chapter"><div class="toc-title-box"><a href="ch-mathematical-objects.html" class="internal"><span class="codenumber">4</span> <span class="title">Mathematical objects</span></a></div></li>
@@ -163,7 +163,7 @@ window.MathJax = {
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="section" id="sec-ramsey"><h2 class="heading hide-type">
-<span class="type">Section</span><span class="space"> </span><span class="codenumber">3.5</span><span class="space"> </span><span class="title">R(3,3) = 6</span>
+<span class="type">Section</span><span class="space"> </span><span class="codenumber">3.5</span><span class="space"> </span><span class="title">Example: R(3,3) = 6</span>
 </h2></section></div>
 <div class="ptx-content-footer">
 <a class="previous-button button" href="sec-exhaustion.html" title="Previous"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cb;</span><span class="name">Prev</span></a><a class="top-button button" href="#" title="Top"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5ce;</span><span class="name">Top</span></a><a class="next-button button" href="ch-mathematical-objects.html" title="Next"><span class="name">Next</span><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5cc;</span></a>
