--- a/frontmatter.html
+++ b/frontmatter.html
@@ -92,7 +92,7 @@ window.MathJax = {
 <body id="changeme" class="pretext book ignore-math">
 <a class="assistive" href="#ptx-content">Skip to main content</a><header id="ptx-masthead" class="ptx-masthead"><div class="ptx-banner">
 <a id="logo-link" class="logo-link" target="_blank" href=""></a><div class="title-container">
-<h1 class="heading"><a href="series-and-transforms.html"><span class="title">Series and Transforms:</span> <span class="subtitle">real analysis for applied mathematicians</span></a></h1>
+<h1 class="heading"><a href="series-and-transforms.html"><span class="title">Series and Transforms:</span> <span class="subtitle">Real analysis for applied mathematicians</span></a></h1>
 <p class="byline">Nathan Clisby</p>
 </div>
 </div></header><nav id="ptx-navbar" class="ptx-navbar navbar"><button class="toc-toggle button" title="Contents"><span class="icon material-symbols-outlined" aria-hidden="true">&#xe5d2;</span><span class="name">Contents</span></button><div class="searchbox">
@@ -164,7 +164,7 @@ window.MathJax = {
 <li class="toc-item toc-backmatter"><div class="toc-title-box"><a href="backmatter.html" class="internal"><span class="title">Backmatter</span></a></div></li>
 </ul></nav></div>
 <main class="ptx-main"><div id="ptx-content" class="ptx-content"><section class="frontmatter" id="frontmatter"><h2 class="heading">
-<span class="title">Series and Transforms:</span> <span class="subtitle">real analysis for applied mathematicians</span>
+<span class="title">Series and Transforms:</span> <span class="subtitle">Real analysis for applied mathematicians</span>
 </h2>
 <div class="author">
 <div class="author-name">Nathan Clisby</div>
