--- a/interactive-fourier-test2.html
+++ b/interactive-fourier-test2.html
@@ -45,7 +45,7 @@
 \)</span></div>
 <header id="ptx-masthead" class="ptx-masthead"><div class="ptx-banner">
 <a id="logo-link" class="logo-link" target="_blank" href=""></a><div class="title-container">
-<h1 class="heading"><a href="series-and-transforms.html"><span class="title">Series and Transforms:</span> <span class="subtitle">real analysis for applied mathematicians</span></a></h1>
+<h1 class="heading"><a href="series-and-transforms.html"><span class="title">Series and Transforms:</span> <span class="subtitle">Real analysis for applied mathematicians</span></a></h1>
 <p class="byline">Nathan Clisby</p>
 </div>
 </div></header><div class="ptx-page"><main class="ptx-main"><div id="ptx-content" class="ptx-content" style="max-width: 1600px">
